--- a/templates/programs.html
+++ b/templates/programs.html
@@ -2,68 +2,288 @@
 
 {% block content %}
 
-        <h1>Programs</h1>
-        <!--   Card Container    -->
-        <div class=" container d-flex align-items center justify-content-center text-center"
-             style="background-color: yellow;">
-            <!--    Card Row Container Start        -->
-            <div class="row" style="background-color: red;">
-            {% for workout in pl: %}
-
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ workout["title"] }}</h5>
-                            <p class="card-text">{{ workout["summary"] }}</p>
-                            <a href="{{ url_for('get_workout', name=workout['title']) }}" class="btn btn-primary">View Workout</a>
-                        </div>
-                    </div>
+<h1>Programs</h1>
+<!--   Card Container    -->
+<div class=" container d-flex align-items center justify-content-center text-center"
+     style="background-color: yellow;">
+    <!--Powerlifting Cards-->
+    <div class="row" style="background-color: red;">
+        <h1>POWERLIFTING</h1>
+        {% for workout in pl: %}
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{ workout["title"] }}</h5>
+                    <p class="card-text">{{ workout["summary"] }}</p>
+                    <a href="{{ url_for('get_workout', name=workout['link']) }}" class="btn btn-primary">View
+                        Workout</a>
                 </div>
-            {% endfor %}
-<!--                <div class="col">-->
-<!--                    <div class="card" style="width: 18rem;">-->
-<!--                        <img src="..." class="card-img-top" alt="...">-->
-<!--                        <div class="card-body">-->
-<!--                            <h5 class="card-title">Card title</h5>-->
-<!--                            <p class="card-text">Some quick example text to build on the card title and make up the bulk-->
-<!--                                of-->
-<!--                                the-->
-<!--                                card's content.</p>-->
-<!--                            <a href="#" class="btn btn-primary">Go somewhere</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col">-->
-<!--                    <div class="card" style="width: 18rem;">-->
-<!--                        <img src="..." class="card-img-top" alt="...">-->
-<!--                        <div class="card-body">-->
-<!--                            <h5 class="card-title">Card title</h5>-->
-<!--                            <p class="card-text">Some quick example text to build on the card title and make up the bulk-->
-<!--                                of-->
-<!--                                the-->
-<!--                                card's content.</p>-->
-<!--                            <a href="#" class="btn btn-primary">Go somewhere</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col">-->
-<!--                    <div class="card" style="width: 18rem;">-->
-<!--                        <img src="..." class="card-img-top" alt="...">-->
-<!--                        <div class="card-body">-->
-<!--                            <h5 class="card-title">Card title</h5>-->
-<!--                            <p class="card-text">Some quick example text to build on the card title and make up the bulk-->
-<!--                                of-->
-<!--                                the-->
-<!--                                card's content.</p>-->
-<!--                            <a href="#" class="btn btn-primary">Go somewhere</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                &lt;!&ndash;      Card Row Container End Add New Card Above          &ndash;&gt;-->
-<!--                </div>-->
-
             </div>
         </div>
+        {% endfor %}
+        <!--Bodybuilding Cards-->
+        <h1>BODYBUILDING</h1>
+        {% for workout in bb: %}
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{ workout["title"] }}</h5>
+                    <p class="card-text">{{ workout["summary"] }}</p>
+                    <a href="{{ url_for('get_workout', name=workout['link']) }}" class="btn btn-primary">View
+                        Workout</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+
+        <!--                <div class="col">-->
+        <!--                    <div class="card" style="width: 18rem;">-->
+        <!--                        <img src="..." class="card-img-top" alt="...">-->
+        <!--                        <div class="card-body">-->
+        <!--                            <h5 class="card-title">Card title</h5>-->
+        <!--                            <p class="card-text">Some quick example text to build on the card title and make up the bulk-->
+        <!--                                of-->
+        <!--                                the-->
+        <!--                                card's content.</p>-->
+        <!--                            <a href="#" class="btn btn-primary">Go somewhere</a>-->
+        <!--                        </div>-->
+        <!--                    </div>-->
+        <!--                </div>-->
+        <!--                <div class="col">-->
+        <!--                    <div class="card" style="width: 18rem;">-->
+        <!--                        <img src="..." class="card-img-top" alt="...">-->
+        <!--                        <div class="card-body">-->
+        <!--                            <h5 class="card-title">Card title</h5>-->
+        <!--                            <p class="card-text">Some quick example text to build on the card title and make up the bulk-->
+        <!--                                of-->
+        <!--                                the-->
+        <!--                                card's content.</p>-->
+        <!--                            <a href="#" class="btn btn-primary">Go somewhere</a>-->
+        <!--                        </div>-->
+        <!--                    </div>-->
+        <!--                </div>-->
+        <!--                <div class="col">-->
+        <!--                    <div class="card" style="width: 18rem;">-->
+        <!--                        <img src="..." class="card-img-top" alt="...">-->
+        <!--                        <div class="card-body">-->
+        <!--                            <h5 class="card-title">Card title</h5>-->
+        <!--                            <p class="card-text">Some quick example text to build on the card title and make up the bulk-->
+        <!--                                of-->
+        <!--                                the-->
+        <!--                                card's content.</p>-->
+        <!--                            <a href="#" class="btn btn-primary">Go somewhere</a>-->
+        <!--                        </div>-->
+        <!--                    </div>-->
+        <!--                &lt;!&ndash;      Card Row Container End Add New Card Above          &ndash;&gt;-->
+        <!--                </div>-->
+
+    </div>
+</div>
 
 
 {% endblock %}
+
+            <div class="vstack" style="background-color: ;">
+                <!--Chest&Back-->
+                <div class="" style="background-color:;">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th class="col-6" scope="col">Movement</th>
+                            <th scope="col">Weight</th>
+                            <th scope="col">Sets</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">Incline DB Press (A1)</th>
+                            <td>60% 1RM</td>
+                            <td>10x6</td>
+                        </tr>
+
+                        <tr>
+                            <th scope="row">Wide Grip Pull Ups (A2)</th>
+                            <td>60% 1RM</td>
+                            <td>10x6</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Flat DB Flyes (B1)</th>
+                            <td>60% 1RM</td>
+                            <td>3x6</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Bent Over Rows w EZ Bar (B2)</th>
+                            <td>60% 1RM</td>
+                            <td>3x6</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!--Legs & Abs-->
+                <div class="" style="background-color:;">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th class="col-6" scope="col">Movement</th>
+                            <th scope="col">Weight</th>
+                            <th scope="col">Sets</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">Bent Knee Deadlifts (A1)</th>
+                            <td>60% 1RM</td>
+                            <td>10x6</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Wide Grip Pull Ups (A2)</th>
+                            <td>60% 1RM</td>
+                            <td>10x6</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Twisting Crunches (B1)</th>
+                            <td>20 Rep Max</td>
+                            <td>3x12-15</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Standing Calf Raises (B2)</th>
+                            <td>20 Rep Max</td>
+                            <td>3x12-15</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+                <!--Rest-->
+                <div class="" style="background-color:;">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th scope="col">Rest Day</th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
+                <!--Arms&Shoulders-->
+                <div class="" style="background-color:;">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th class="col-6" scope="col">Movement</th>
+                            <th scope="col">Weight</th>
+                            <th scope="col">Sets</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">Parallel Bar Dips (A1)</th>
+                            <td>60% 1RM</td>
+                            <td>10x10</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Hammer Curls (A2)</th>
+                            <td>60% 1RM</td>
+                            <td>10x8</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Bent Over Lateral Raise (B1)</th>
+                            <td>60% 1RM</td>
+                            <td>3x8-10</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Seated Dumbbell Lateral Raises (B2)</th>
+                            <td>60% 1RM</td>
+                            <td>3x10-12</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+                <!--Rest-->
+                <div class="" style="background-color:;">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th scope="col">Rest Day</th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
+                <!--Chest&Back-->
+                <div class="" style="background-color:;">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th class="col-6" scope="col">Movement</th>
+                            <th scope="col">Weight</th>
+                            <th scope="col">Sets</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">Decline Dumbbell Press (A1)</th>
+                            <td>60% 1RM</td>
+                            <td>10x10</td>
+                        </tr>
+
+                        <tr>
+                            <th scope="row">Chin Ups (A2)</th>
+                            <td>60% 1RM</td>
+                            <td>10x10</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Incline Dumbbell Flyes (B1)</th>
+                            <td>60% 1RM</td>
+                            <td>3x10-12</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">One Arm Dumbbell Rows (B2)</th>
+                            <td>60% 1RM</td>
+                            <td>3x10-12</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!--Legs & Abs-->
+                <div class="" style="background-color:;">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th class="col-6" scope="col">Movement</th>
+                            <th scope="col">Weight</th>
+                            <th scope="col">Sets</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">Squats (A1)</th>
+                            <td>60% 1RM</td>
+                            <td>10x10</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Lying Leg Curls (A2)</th>
+                            <td>60% 1RM</td>
+                            <td>10x8</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Low Cable Pull-ins (B1)</th>
+                            <td>60% 1RM</td>
+                            <td>3x10-12</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Seated Calf Raises (B2)</th>
+                            <td>60% 1RM</td>
+                            <td>3x10-12</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
